--- a/sauron/src/Sauron.Runner/appsettings.json
+++ b/sauron/src/Sauron.Runner/appsettings.json
@@ -4,5 +4,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SAURON_CRAWLER_BASE_URL": "https://www.cmbh.mg.gov.br/sites/all/modules/execucao_orcamentaria_custeio",
+  "SAURON_CRAWLER_SEARCH_RESOURCE": "pesquisar.php",
+  "SAURON_CRAWLER_DEATAIL_RESOURCE": "detalhar.php",
+  "SAURON_MONGO_DB_CONNECTION": "mongodb://1cf5b351:7cc57fac!#@skynet:8090",
+  "SAURON_MONGO_DB_DATABASE": "sauron",
+  "SAURON_MONGO_DB_DATABASE_SEARCH_COLLECTION": "search",
+  "SAURON_MONGO_DB_DATABASE_DETAIL_COLLECTION": "detail"
 }
