Implementa agendador de tarefas

--- a/sauron/src/Sauron.Runner/appsettings.json
+++ b/sauron/src/Sauron.Runner/appsettings.json
@@ -5,6 +5,7 @@
     }
   },
   "AllowedHosts": "*",
+  "SAURON_TASK_SCHEDULER_DAYS_INTERVAL": 30,
   "SAURON_CRAWLER_BASE_URL": "https://www.cmbh.mg.gov.br/sites/all/modules/execucao_orcamentaria_custeio",
   "SAURON_CRAWLER_SEARCH_RESOURCE": "pesquisar.php",
   "SAURON_CRAWLER_DEATAIL_RESOURCE": "detalhar.php",
