--- a/sauron/src/Sauron.Abstractions/Sauron.Abstractions.csproj
+++ b/sauron/src/Sauron.Abstractions/Sauron.Abstractions.csproj
@@ -5,4 +5,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
