--- a/sauron/src/Sauron.Runner/appsettings.json
+++ b/sauron/src/Sauron.Runner/appsettings.json
@@ -7,10 +7,10 @@
   "AllowedHosts": "*",
   "SAURON_TASK_SCHEDULER_DAYS_INTERVAL": 30,
   "SAURON_CRAWLER_BASE_URL": "https://www.cmbh.mg.gov.br/sites/all/modules/execucao_orcamentaria_custeio",
-  "SAURON_CRAWLER_SEARCH_RESOURCE": "pesquisar.php",
-  "SAURON_CRAWLER_DEATAIL_RESOURCE": "detalhar.php",
+  "SAURON_CRAWLER_GLOBAL_SOURCE": "pesquisar.php",
+  "SAURON_CRAWLER_DETAIL_SOURCE": "detalhar.php",
   "SAURON_MONGO_DB_CONNECTION": "mongodb://1cf5b351:7cc57fac!#@skynet:8090",
   "SAURON_MONGO_DB_DATABASE": "sauron",
-  "SAURON_MONGO_DB_DATABASE_SEARCH_COLLECTION": "search",
+  "SAURON_MONGO_DB_DATABASE_GLOBAL_COLLECTION": "global",
   "SAURON_MONGO_DB_DATABASE_DETAIL_COLLECTION": "detail"
 }
