--- a/sauron/src/Sauron.Runner/appsettings.json
+++ b/sauron/src/Sauron.Runner/appsettings.json
@@ -5,8 +5,9 @@
     }
   },
   "AllowedHosts": "*",
-  "SAURON_TASK_SCHEDULER_DAYS_INTERVAL": 30,
+  "SAURON_TASK_SCHEDULER_DAYS_INTERVAL": 1,
   "SAURON_CRAWLER_BASE_URL": "https://www.cmbh.mg.gov.br/sites/all/modules/execucao_orcamentaria_custeio",
+  "SAURON_CRAWLER_START_YEAR": "2016",
   "SAURON_CRAWLER_GLOBAL_SOURCE": "pesquisar.php",
   "SAURON_CRAWLER_DETAIL_SOURCE": "detalhar.php",
   "SAURON_MONGO_DB_CONNECTION": "mongodb://1cf5b351:7cc57fac!#@skynet:8090",
