--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+**/.idea/**
+.idea/**/workspace.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -74,6 +76,7 @@ fabric.properties
 
 ### VisualStudioCode ###
 .vscode/*
+**/.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -118,6 +121,7 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+**/.vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
