--- a/samwise/src/Samwise.Services/Samwise.Services.csproj
+++ b/samwise/src/Samwise.Services/Samwise.Services.csproj
@@ -5,11 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Samwise.Abstractions\Samwise.Abstractions.csproj" />
+      <ProjectReference Include="..\Samwise.Parsers\Samwise.Parsers.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="HtmlAgilityPack" Version="1.11.12" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.0" />
     </ItemGroup>
 
