altera todos os appsettings.json para refletir as alterações feitas no docker-compose.yml

--- a/sauron/src/Sauron.Runner/appsettings.json
+++ b/sauron/src/Sauron.Runner/appsettings.json
@@ -10,7 +10,7 @@
   "SAURON_CRAWLER_INITIAL_YEAR": "2016",
   "SAURON_CRAWLER_GLOBAL_SOURCE": "pesquisar.php",
   "SAURON_CRAWLER_DETAIL_SOURCE": "detalhar.php",
-  "SAURON_MONGO_DB_CONNECTION": "mongodb://1cf5b351:7cc57fac!#@skynet:8090",
+  "SAURON_MONGO_DB_CONNECTION": "mongodb://root:root@skynet:8090",
   "SAURON_MONGO_DB_DATABASE": "sauron",
   "SAURON_MONGO_DB_DATABASE_GLOBAL_COLLECTION": "global",
   "SAURON_MONGO_DB_DATABASE_DETAIL_COLLECTION": "detail"
