Corrige defeitos de conexão com mongo

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   mongo:
     image: mongo
-    container_name: sta_efigenia_mongo_db
+    container_name: sta_efigenia_mongo
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
@@ -12,7 +12,7 @@ services:
       - 8082:27017
     volumes:
       - /home/volumes/mongodb/data/db:/data/db
-    networks:
+    networks: 
       - sta_efigenia_network
 
   mongo-express:
@@ -28,9 +28,9 @@ services:
       ME_CONFIG_MONGODB_ADMINPASSWORD: root
     links:
       - mongo
-    networks:
+    networks: 
       - sta_efigenia_network
-
+  
   rabbitmq:
     image: rabbitmq:3-management-alpine
     container_name: sta_efigenia_rabbitmq
@@ -42,7 +42,28 @@ services:
       - 8084:15672
     volumes:
       - /home/volumes/rabbitmq/var/lib:/var/lib/rabbitmq
-    networks:
+    networks: 
+      - sta_efigenia_network
+  
+  sauron:
+    image: santa-efigenia/sauron:1.0-alpha
+    container_name: sta_efigenia_sauron
+    environment:
+      SAURON_TASK_SCHEDULER_DAYS_INTERVAL: 1
+      SAURON_CRAWLER_BASE_URL: https://www.cmbh.mg.gov.br/sites/all/modules/execucao_orcamentaria_custeio
+      SAURON_CRAWLER_INITIAL_YEAR: 2016
+      SAURON_CRAWLER_GLOBAL_SOURCE: pesquisar.php
+      SAURON_CRAWLER_DETAIL_SOURCE: detalhar.php
+      SAURON_MONGO_DB_USERNAME: root
+      SAURON_MONGO_DB_PASSWORD: root
+      SAURON_MONGO_DB_CONTCPIP: sta_efigenia_mongo
+      SAURON_MONGO_DB_CONNPORT: 27017
+      SAURON_MONGO_DB_DATABASE: sauron
+      SAURON_MONGO_DB_DATABASE_GLOBAL_COLLECTION: global
+      SAURON_MONGO_DB_DATABASE_DETAIL_COLLECTION: detail
+    links:
+      - mongo
+    networks: 
       - sta_efigenia_network
 
 networks: 
