--- a/sauron/src/Sauron.Runner/appsettings.json
+++ b/sauron/src/Sauron.Runner/appsettings.json
@@ -1,7 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -10,7 +12,10 @@
   "SAURON_CRAWLER_INITIAL_YEAR": "2016",
   "SAURON_CRAWLER_GLOBAL_SOURCE": "pesquisar.php",
   "SAURON_CRAWLER_DETAIL_SOURCE": "detalhar.php",
-  "SAURON_MONGO_DB_CONNECTION": "mongodb://root:root@skynet:8082",
+  "SAURON_MONGO_DB_USERNAME": "root",
+  "SAURON_MONGO_DB_PASSWORD": "root",
+  "SAURON_MONGO_DB_CONTCPIP": "52.183.17.70",
+  "SAURON_MONGO_DB_CONNPORT": 8082,
   "SAURON_MONGO_DB_DATABASE": "sauron",
   "SAURON_MONGO_DB_DATABASE_GLOBAL_COLLECTION": "global",
   "SAURON_MONGO_DB_DATABASE_DETAIL_COLLECTION": "detail"
