--- a/samwise/tests/Samwise.Parsers.UnitTests/Samwise.Parsers.UnitTests.csproj
+++ b/samwise/tests/Samwise.Parsers.UnitTests/Samwise.Parsers.UnitTests.csproj
@@ -7,13 +7,21 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="5.8.0" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.12" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
         <PackageReference Include="xunit" Version="2.4.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\Samwise.Abstractions\Samwise.Abstractions.csproj" />
+      <ProjectReference Include="..\..\src\Samwise.Parsers\Samwise.Parsers.csproj" />
       <ProjectReference Include="..\Samwise.Base\Samwise.Base.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Services" />
     </ItemGroup>
 
 </Project>
