--- a/sauron/tests/Sauron.Crawlers.UnitTests/Sauron.Crawlers.UnitTests.csproj
+++ b/sauron/tests/Sauron.Crawlers.UnitTests/Sauron.Crawlers.UnitTests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>    
+    <PackageReference Include="Bogus" Version="28.0.2" />    
     <PackageReference Include="FluentAssertions" Version="5.8.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.4" />
@@ -31,6 +32,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Sauron.Crawlers\Sauron.Crawlers.csproj" />
     <ProjectReference Include="..\..\src\Sauron.Repositories.MongoDB\Sauron.Repositories.MongoDB.csproj" />
+    <ProjectReference Include="..\..\src\Sauron.Runner\Sauron.Runner.csproj" />
   </ItemGroup>
 
 </Project>
