--- a/samwise/tests/Samwise.Base/Samwise.Base.csproj
+++ b/samwise/tests/Samwise.Base/Samwise.Base.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Bogus" Version="28.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\Samwise.Abstractions\Samwise.Abstractions.csproj" />
+    </ItemGroup>
+
 </Project>
