--- a/samwise/tests/Samwise.Parsers.UnitTests/Samwise.Parsers.UnitTests.csproj
+++ b/samwise/tests/Samwise.Parsers.UnitTests/Samwise.Parsers.UnitTests.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
 
         <IsPackable>false</IsPackable>
+
+        <AssemblyName>Samwise.UnitTests</AssemblyName>
+
+        <RootNamespace>Samwise.UnitTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
