--- a/samwise/src/Samwise.Repositories.MongoDB/Samwise.Repositories.MongoDB.csproj
+++ b/samwise/src/Samwise.Repositories.MongoDB/Samwise.Repositories.MongoDB.csproj
@@ -6,7 +6,15 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Samwise.Abstractions\Samwise.Abstractions.csproj"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.0"/>
+    </ItemGroup>
+
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.9.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     </ItemGroup>
 
 </Project>
