corrige problema de fuso horário

--- a/sauron/src/Sauron.Runner/appsettings.json
+++ b/sauron/src/Sauron.Runner/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "SAURON_UTC_HOURS_OFFSET": -3,
   "SAURON_TASK_SCHEDULER_DAYS_INTERVAL": 1,
   "SAURON_CRAWLER_BASE_URL": "https://www.cmbh.mg.gov.br/sites/all/modules/execucao_orcamentaria_custeio",
   "SAURON_CRAWLER_INITIAL_YEAR": "2016",
