Criar estrutura para multiplos bancos

--- a/samwise/src/Samwise.Runner/appsettings.json
+++ b/samwise/src/Samwise.Runner/appsettings.json
@@ -13,6 +13,5 @@
   "SAMWISE_MONGO_DB_CONTCPIP": "52.183.17.70",
   "SAMWISE_MONGO_DB_CONNPORT": 8082,
   "SAMWISE_MONGO_DB_DATABASE": "samwise",
-  "SAMWISE_MONGO_DB_DATABASE_GLOBAL_COLLECTION": "global",
-  "SAURON_MONGO_DB_DATABASE_DETAIL_COLLECTION": "detail"
+  "SAMWISE_MONGO_DB_DATABASE_COLLECTION": "cmbh"
 }
