--- a/samwise/src/Samwise.Abstractions/Samwise.Abstractions.csproj
+++ b/samwise/src/Samwise.Abstractions/Samwise.Abstractions.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.9.1" />
     </ItemGroup>
 
 </Project>
