--- a/samwise/src/Samwise.Services/Samwise.Services.csproj
+++ b/samwise/src/Samwise.Services/Samwise.Services.csproj
@@ -6,10 +6,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Samwise.Parsers\Samwise.Parsers.csproj" />
+      <ProjectReference Include="..\Samwise.Repositories.MongoDB\Samwise.Repositories.MongoDB.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
     </ItemGroup>
 
 </Project>
