--- a/samwise/tests/Samwise.Base/Samwise.Base.csproj
+++ b/samwise/tests/Samwise.Base/Samwise.Base.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\Samwise.Abstractions\Samwise.Abstractions.csproj" />
+      <ProjectReference Include="..\..\src\Samwise.Runner\Samwise.Runner.csproj" />
     </ItemGroup>
 
 </Project>
