--- a/sauron/src/Sauron.Runner/appsettings.json
+++ b/sauron/src/Sauron.Runner/appsettings.json
@@ -9,15 +9,15 @@
   "AllowedHosts": "*",
   "SAURON_UTC_HOURS_OFFSET": -3,
   "SAURON_TASK_SCHEDULER_DAYS_INTERVAL": 1,
-  "SAURON_CRAWLER_BASE_URL": "https://www.cmbh.mg.gov.br/sites/all/modules/execucao_orcamentaria_custeio",
-  "SAURON_CRAWLER_INITIAL_YEAR": "2016",
-  "SAURON_CRAWLER_GLOBAL_SOURCE": "pesquisar.php",
-  "SAURON_CRAWLER_DETAIL_SOURCE": "detalhar.php",
-  "SAURON_MONGO_DB_USERNAME": "root",
-  "SAURON_MONGO_DB_PASSWORD": "root",
-  "SAURON_MONGO_DB_CONTCPIP": "52.183.17.70",
-  "SAURON_MONGO_DB_CONNPORT": 8082,
-  "SAURON_MONGO_DB_DATABASE": "sauron",
-  "SAURON_MONGO_DB_DATABASE_GLOBAL_COLLECTION": "global",
-  "SAURON_MONGO_DB_DATABASE_DETAIL_COLLECTION": "detail"
+  "SAURON_CRAWLER_BASE_URL": "",
+  "SAURON_CRAWLER_INITIAL_YEAR": "",
+  "SAURON_CRAWLER_GLOBAL_SOURCE": "",
+  "SAURON_CRAWLER_DETAIL_SOURCE": "",
+  "SAURON_MONGO_DB_USERNAME": "",
+  "SAURON_MONGO_DB_PASSWORD": "",
+  "SAURON_MONGO_DB_CONTCPIP": "",
+  "SAURON_MONGO_DB_CONNPORT": ,
+  "SAURON_MONGO_DB_DATABASE": "",
+  "SAURON_MONGO_DB_DATABASE_GLOBAL_COLLECTION": "",
+  "SAURON_MONGO_DB_DATABASE_DETAIL_COLLECTION": ""
 }
