--- a/samwise/src/Samwise.Repositories.MongoDB/Samwise.Repositories.MongoDB.csproj
+++ b/samwise/src/Samwise.Repositories.MongoDB/Samwise.Repositories.MongoDB.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.4" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
         <PackageReference Include="MongoDB.Driver" Version="2.9.1" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
