--- a/samwise/src/Samwise.Runner/appsettings.json
+++ b/samwise/src/Samwise.Runner/appsettings.json
@@ -13,5 +13,11 @@
   "SAMWISE_MONGO_DB_CONTCPIP": "52.183.17.70",
   "SAMWISE_MONGO_DB_CONNPORT": 8082,
   "SAMWISE_MONGO_DB_DATABASE": "samwise",
-  "SAMWISE_MONGO_DB_DATABASE_COLLECTION": "cmbh"
+  "SAMWISE_MONGO_DB_DATABASE_COLLECTION": "cmbh",
+  "SAURON_MONGO_DB_USERNAME": "root",
+  "SAURON_MONGO_DB_PASSWORD": "root",
+  "SAURON_MONGO_DB_CONTCPIP": "52.183.17.70",
+  "SAURON_MONGO_DB_CONNPORT": 8082,
+  "SAURON_MONGO_DB_DATABASE": "sauron",
+  "SAURON_MONGO_DB_DATABASE_COLLECTION": "detail"
 }
