--- a/samwise/tests/Samwise.Base/Samwise.Base.csproj
+++ b/samwise/tests/Samwise.Base/Samwise.Base.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="Bogus" Version="28.0.2" />
+      <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
