--- a/samwise/src/Samwise.Runner/appsettings.json
+++ b/samwise/src/Samwise.Runner/appsettings.json
@@ -8,12 +8,14 @@
   },
   "SAMWISE_UTC_HOURS_OFFSET": -3,
   "SAMWISE_TASK_SCHEDULER_DAYS_INTERVAL": 1,
+  "SAMWISE_MONGO_ADMIN_DB": "admin",
   "SAMWISE_MONGO_DB_USERNAME": "root",
   "SAMWISE_MONGO_DB_PASSWORD": "root",
   "SAMWISE_MONGO_DB_CONTCPIP": "52.183.17.70",
   "SAMWISE_MONGO_DB_CONNPORT": 8082,
   "SAMWISE_MONGO_DB_DATABASE": "samwise",
   "SAMWISE_MONGO_DB_DATABASE_COLLECTION": "cmbh",
+  "SAURON_MONGO_ADMIN_DB": "admin",
   "SAURON_MONGO_DB_USERNAME": "root",
   "SAURON_MONGO_DB_PASSWORD": "root",
   "SAURON_MONGO_DB_CONTCPIP": "52.183.17.70",
