--- a/samwise/tests/Samwise.Base/Samwise.Base.csproj
+++ b/samwise/tests/Samwise.Base/Samwise.Base.csproj
@@ -18,4 +18,10 @@
       <ProjectReference Include="..\..\src\Samwise.Runner\Samwise.Runner.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
