--- a/samwise/src/Samwise.Runner/Samwise.Runner.csproj
+++ b/samwise/src/Samwise.Runner/Samwise.Runner.csproj
@@ -13,5 +13,11 @@
     <ItemGroup>
       <ProjectReference Include="..\Samwise.Orchestrator\Samwise.Orchestrator.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
     
 </Project>
