--- a/samwise/src/Samwise.Runner/Samwise.Runner.csproj
+++ b/samwise/src/Samwise.Runner/Samwise.Runner.csproj
@@ -3,21 +3,23 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.2</TargetFramework>
+        <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App" />
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.App"/>
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.2"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Samwise.Orchestrator\Samwise.Orchestrator.csproj" />
+        <ProjectReference Include="..\Samwise.Orchestrator\Samwise.Orchestrator.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="appsettings.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
-    
+
 </Project>
