--- a/samwise/src/Samwise.Services/Samwise.Services.csproj
+++ b/samwise/src/Samwise.Services/Samwise.Services.csproj
@@ -2,15 +2,16 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Samwise.Parsers\Samwise.Parsers.csproj" />
-      <ProjectReference Include="..\Samwise.Repositories.MongoDB\Samwise.Repositories.MongoDB.csproj" />
+        <ProjectReference Include="..\Samwise.Parsers\Samwise.Parsers.csproj"/>
+        <ProjectReference Include="..\Samwise.Repositories.MongoDB\Samwise.Repositories.MongoDB.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0"/>
     </ItemGroup>
 
 </Project>
