--- a/samwise/tests/Samwise.UnitTests/Samwise.UnitTests.csproj
+++ b/samwise/tests/Samwise.UnitTests/Samwise.UnitTests.csproj
@@ -2,11 +2,9 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
-
+        <LangVersion>latest</LangVersion>
         <IsPackable>false</IsPackable>
-
         <AssemblyName>Samwise.UnitTests</AssemblyName>
-
         <RootNamespace>Samwise.UnitTests</RootNamespace>
     </PropertyGroup>
 
