--- a/samwise/src/Samwise.Runner/Samwise.Runner.csproj
+++ b/samwise/src/Samwise.Runner/Samwise.Runner.csproj
@@ -8,12 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App"/>
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.2"/>
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.12" />
+        <PackageReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Samwise.Orchestrator\Samwise.Orchestrator.csproj"/>
+        <ProjectReference Include="..\Samwise.Orchestrator\Samwise.Orchestrator.csproj" />
     </ItemGroup>
 
     <ItemGroup>
