--- a/sauron/src/Sauron.Apm/Sauron.Apm.csproj
+++ b/sauron/src/Sauron.Apm/Sauron.Apm.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sauron.Abstractions\Sauron.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
