--- a/sauron/src/Sauron.Runner/appsettings.json
+++ b/sauron/src/Sauron.Runner/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ElasticApm": {
     "SecretToken": "",
-    "ServerUrls": "http://localhost:8086",
+    "ServerUrls": "http://skynet:8086",
     "ServiceName": "Sauron"
   },
   "SAURON_UTC_HOURS_OFFSET": -3,
@@ -20,7 +20,7 @@
   "SAURON_CRAWLER_DETAIL_SOURCE": "detalhar.php",
   "SAURON_MONGO_DB_USERNAME": "root",
   "SAURON_MONGO_DB_PASSWORD": "root",
-  "SAURON_MONGO_DB_CONTCPIP": "localhost",
+  "SAURON_MONGO_DB_CONTCPIP": "skynet",
   "SAURON_MONGO_DB_CONNPORT": 8082,
   "SAURON_MONGO_DB_DATABASE": "sauron",
   "SAURON_MONGO_DB_DATABASE_GLOBAL_COLLECTION": "global",
