adiciona id do vereador a entidade da camara

--- a/sauron/src/Sauron.Runner/appsettings.Development.json
+++ b/sauron/src/Sauron.Runner/appsettings.Development.json
@@ -20,7 +20,7 @@
   "SAURON_CRAWLER_DETAIL_SOURCE": "detalhar.php",
   "SAURON_MONGO_DB_USERNAME": "root",
   "SAURON_MONGO_DB_PASSWORD": "root",
-  "SAURON_MONGO_DB_CONTCPIP": "localhost",
+  "SAURON_MONGO_DB_CONTCPIP": "skynet",
   "SAURON_MONGO_DB_CONNPORT": 8082,
   "SAURON_MONGO_DB_DATABASE": "sauron",
   "SAURON_MONGO_DB_DATABASE_GLOBAL_COLLECTION": "global",
