--- a/samwise/src/Samwise.Abstractions/Samwise.Abstractions.csproj
+++ b/samwise/src/Samwise.Abstractions/Samwise.Abstractions.csproj
@@ -8,7 +8,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
-        <PackageReference Include="MongoDB.Driver" Version="2.9.1" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     </ItemGroup>
 
 </Project>
