Finaliza implementação de agendamento para execução samwise

--- a/samwise/src/Samwise.Orchestrator/Samwise.Orchestrator.csproj
+++ b/samwise/src/Samwise.Orchestrator/Samwise.Orchestrator.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Samwise.Parsers\Samwise.Parsers.csproj" />
       <ProjectReference Include="..\Samwise.Repositories.MongoDB\Samwise.Repositories.MongoDB.csproj" />
+      <ProjectReference Include="..\Samwise.Scheduling\Samwise.Scheduling.csproj" />
       <ProjectReference Include="..\Samwise.Services\Samwise.Services.csproj" />
     </ItemGroup>
 
