--- a/samwise/src/Samwise.Runner/Samwise.Runner.csproj
+++ b/samwise/src/Samwise.Runner/Samwise.Runner.csproj
@@ -6,12 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentScheduler" Version="5.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Samwise.Orchestrator\Samwise.Orchestrator.csproj" />
+      <ProjectReference Include="..\Samwise.Scheduling\Samwise.Scheduling.csproj" />
     </ItemGroup>
 
     <ItemGroup>
